--- a/Contoso.WebApp/Pages/Product/Product.cshtml
+++ b/Contoso.WebApp/Pages/Product/Product.cshtml
@@ -4,11 +4,19 @@
     ViewData["Title"] = "Product";
 } 
 
+
 @if (Model.Product != null)
 {
-    <div class="product-card">
-        
-        <img src="~/images/@Model.Product.ImageUrl" alt="@Model.Product.Name" class="product-image" />
+    @if (Model.SuccessMessage != null && Model.SuccessMessage != string.Empty)
+    {
+        <div id="success-message" class="alert alert-success" role="alert">
+            @Model.SuccessMessage
+        </div>
+    }
+    <div class="product-card-details">
+        <div class="product-card-details-container">
+            <img src="~/images/@Model.Product.ImageUrl" alt="@Model.Product.Name" class="product-image-details" />
+        </div>
         <div class="product-info">
             <h2>@Model.Product.Name</h2>
             <p>@Model.Product.Description</p>
@@ -17,10 +25,24 @@
                 <input type="hidden" name="productId" value="@Model.Product.Id" />
                 <button type="submit" class="btn btn-success">Add to Cart</button>
             </form>
-        </div>
+        </div>  
     </div>
 }
 else
 {
     <p>No product found.</p>
+}
+
+@section Scripts {
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var successMessage = document.getElementById("success-message");
+            if (successMessage) {
+                console.log("success message found");
+                setTimeout(function () {
+                    successMessage.style.display = "none";
+                }, 1500);
+            }
+        });
+    </script>
 }
