--- a/Contoso.WebApp/Pages/Shared/_Layout.cshtml
+++ b/Contoso.WebApp/Pages/Shared/_Layout.cshtml
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="~/Contoso.WebApp.styles.css" asp-append-version="true" />
 </head>
 <body>
-@if(Context.Session.GetString("AuthToken") != null)
-    {
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -24,15 +22,36 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Home/Home">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Cart/Cart">Cart</a>
+                         <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Cart/Cart">Cart(@Context.Session.GetString("CartCount"))</a>
                         </li>
                     </ul>
+                    @if(Context.Session.GetString("AuthToken") != null)
+                    {
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Profile/Profile">User Profile(@Context.Session.GetString("UserName"))</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">Logout</a>
+                            </li>
+                        </ul>
+                    }
+                    else 
+                    {
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <span class="nav-link text-dark">Anonymous</span>
+                            </li> 
+                           <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">Login</a>
+                           </li>     
+                        </ul>          
+                    }  
                 </div>
             </div>
         </nav>
     </header>
-    }
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
