--- a/Contoso.WebApp/Pages/Home/Home.cshtml
+++ b/Contoso.WebApp/Pages/Home/Home.cshtml
@@ -18,7 +18,21 @@
 </div>
 
 <div class="content">
-    <h2 class="title">Products</h2>
+    @if (HttpContext.Session.GetString("IsAdmin") == "true" && HttpContext.Session.GetString("AuthToken") != null)
+    {
+        <div class="row align-items-center mb-4">
+            <div class="col-md-4"></div>
+            <div class="col-md-4 text-center">
+                <h2 class="title">Products</h2>
+            </div>
+            <div class="col-md-4 text-end">
+                <a asp-page="/ProductCreate/ProductCreate" class="btn btn-success">Create Product</a>
+            </div>
+        </div>
+    } else {
+        <h2 class="title">Products</h2>
+    }
+    
     @if (Model.Products != null && Model.Products.Any())
     {
         <div class="product-grid">
