--- a/Contoso.WebApp/Pages/Shared/_Layout.cshtml
+++ b/Contoso.WebApp/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Home/Home">Home</a>
                         </li>
-                         <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Cart/Cart">Cart(@Context.Session.GetString("CartCount"))</a>
-                        </li>
+                        @if (Context.Session.GetString("IsAdmin") != "true"){
+                            <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Cart/Cart">Cart(@Context.Session.GetString("CartCount"))</a>
+                            </li>
+                        }
                     </ul>
                     @if(Context.Session.GetString("AuthToken") != null)
                     {
