Challenge2 (Blob Storage): Resource code setup done.

--- a/Contoso.WebApp/Pages/Home/Home.cshtml
+++ b/Contoso.WebApp/Pages/Home/Home.cshtml
@@ -20,6 +20,18 @@
 <div class="content">
     @if (HttpContext.Session.GetString("IsAdmin") == "true" && HttpContext.Session.GetString("AuthToken") != null)
     {
+        @if (TempData["SuccessMessage"] != null)
+        {
+            <div  id="message" class="alert alert-success">
+                @TempData["SuccessMessage"]
+            </div>
+        } else if (TempData["ErrorMessage"] != null)
+        {
+            <div id="message" class="alert alert-danger">
+                @TempData["ErrorMessage"]
+            </div>
+        }
+
         <div class="row align-items-center mb-4">
             <div class="col-md-4"></div>
             <div class="col-md-4 text-center">
@@ -27,6 +39,7 @@
             </div>
             <div class="col-md-4 text-end">
                 <a asp-page="/ProductCreate/ProductCreate" class="btn btn-success">Create Product</a>
+                <a asp-page-handler="UploadImages" class="btn btn-success">Upload Images</a>
             </div>
         </div>
     } else {
@@ -87,3 +100,17 @@
         <p>@Model.ErrorMessage</p>
     }
 </div>
+
+@section Scripts {
+    <script>
+
+        document.addEventListener("DOMContentLoaded", function() {
+            var successMessage = document.getElementById("message");
+            if (successMessage) {
+                setTimeout(function() {
+                    successMessage.style.display = "none";
+                }, 1500);
+            } 
+        });
+    </script>
+}
