Challenge4 (Azure CosmosDB): Base App configured for the challenge

--- a/Contoso.WebApp/Pages/Home/Home.cshtml
+++ b/Contoso.WebApp/Pages/Home/Home.cshtml
@@ -33,13 +33,16 @@
         }
 
         <div class="row align-items-center mb-4">
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <a asp-page-handler="UploadImages" class="btn btn-success">Upload Images</a>
+                <a asp-page-handler="BulkUploadProducts" class="btn btn-success">Bulk Upload</a>
+            </div>
             <div class="col-md-4 text-center">
                 <h2 class="title">Products</h2>
             </div>
             <div class="col-md-4 text-end">
                 <a asp-page="/ProductCreate/ProductCreate" class="btn btn-success">Create Product</a>
-                <a asp-page-handler="UploadImages" class="btn btn-success">Upload Images</a>
+                
             </div>
         </div>
     } else {
