Update to the solution

--- a/Contoso.WebApp/Pages/Cart/Cart.cshtml
+++ b/Contoso.WebApp/Pages/Cart/Cart.cshtml
@@ -40,7 +40,7 @@ else
                 {
                     <tr>
                         <td>
-                            <img src="~/images/product.jpg" alt="Product Image" style="height: 30px; height: 30px;"/>
+                            <img src="@item.Product.ImageUrl" alt="No resized image" style="height: 30px; height: 30px;"/>
                         </td>
                         <td>@item.Product.Name"</td>
                         <td>@item.Quantity</td>
